# boomi-mcp-server

./: .dockerignore  .env  .env.cloud.example  .env.example  .gitignore  CLAUDE.md  CLOUD_DEPLOYMENT_TEST_PLAN.md  Dockerfile  LICENSE  LOCAL_DEV.md  MCP_TOOL_DESIGN.md  MISSING_COMMUNICATION_PARAMS.md  QUICK_START_CLOUD.md  README-CLOUD.md  README.md  SDK_MCP_COMPARISON.md  STANDARDS_STATUS.md  TRADING_PARTNER_VERIFICATION.md  boomi_sdk_services.txt  cloud_server.py  cloud_server_simple.py  cloudbuild.yaml.example  docker-compose.yml  generate_mcp_json.py  generate_token.py  pyproject.toml  requirements-cloud.txt  requirements.txt  run_local.sh  server.py  server_http.py  server_local.py
.github/workflows/: ci.yml  claude.yml  docker-publish.yml  lint-examples.yml  publish.yml
.well-known/: mcp.json
boomi_mcp/: __init__.py  auth.py  server.py  tools.py
docs/: HYBRID_ARCHITECTURE_IMPLEMENTATION.md  cursor_setup.md
docs/archive/: COMPLEX_PROCESS_GAP_ANALYSIS.md
docs/xml_reference/: README.md  builder_patterns.md  trading_partner_xml_examples.md
examples/: README.md  check_deployment_errors.py  deployment_error_analyzer.py  hybrid_process_example.py  mcp.json.docker  mcp.json.linux  mcp.json.windows  using_client.py
examples/output/: example1_simple.xml  example2_etl.xml
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: check_examples.py
src/: server.py
src/boomi_mcp/: __init__.py  auth.py  cloud_auth.py  cloud_secrets.py  credentials.py  gcp_kv_storage.py  oauth_provider.py  server.py  tools.py  trading_partner_tools.py
src/boomi_mcp/categories/: __init__.py
src/boomi_mcp/categories/components/: __init__.py  organizations.py  processes.py  trading_partners.py
src/boomi_mcp/categories/deployment/: __init__.py  trading_partners.py
src/boomi_mcp/models/: __init__.py  process_models.py  trading_partner_builders.py
src/boomi_mcp/utils/: __init__.py  caching.py  error_handling.py  result_formatting.py
src/boomi_mcp/xml_builders/: README.md  yaml_parser.py
src/boomi_mcp/xml_builders/builders/: __init__.py  coordinate_calculator.py  orchestrator.py  process_builder.py
src/boomi_mcp/xml_builders/templates/: __init__.py
src/boomi_mcp_client/: __init__.py  client.py
src/boomi_mcp_server/: __init__.py  auth.py  custom_session.py  sdk_helpers.py  server.py  tools.py
templates/: credentials.html  login.html
tests/: conftest.py  test_auth.py  test_env_warning.py  test_tools.py
(+8 files in other folders)
