[project]
name = "boomi-mcp-server"
version = "0.3.0"
description = "MCP server exposing Boomi API via FastMCP"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Glebuar" }]
requires-python = ">=3.10"

dependencies = [
    "boomi",
    "fastmcp",
    "uvicorn",
    "pydantic",
    "python-dotenv",
]

[project.scripts]
boomi-mcp = "boomi_mcp_server.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=69.5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["boomi_mcp_server*", "boomi_mcp_client*"]
